plugin/devil/lib/devil/DevIL/bindings/visual basic/il.bas


' ImageLib Functions
Public Declare Function ilActiveImage Lib "devil" (ByVal Number As Long) As Byte
Public Declare Function ilActiveLayer Lib "devil" (ByVal Number As Long) As Byte
Public Declare Function ilActiveMipmap Lib "devil" (ByVal Number As Long) As Byte
Public Declare Function ilApplyPal Lib "devil" (ByVal FileName As String) As Byte
Public Declare Function ilApplyProfile Lib "devil" (ByVal InProfile As String, ByVal OutProfile As String) As Byte
Public Declare Sub ilBindImage Lib "devil" (ByVal Image As Long)
Public Declare Function ilBlit Lib "devil" (ByVal Src As Long, ByVal DestX As Long, ByVal DestY As Long, ByVal DestZ As Long, ByVal SrcX As Long, ByVal SrcY As Long, ByVal SrcZ As Long, ByVal width As Long, ByVal height As Long, ByVal Depth As Long) As Byte
Public Declare Sub ilClearColour Lib "devil" (ByVal Red As Single, ByVal Green As Single, ByVal Blue As Single, ByVal Alpha As Single)
Public Declare Function ilClearImage Lib "devil" () As Byte
Public Declare Function ilCloneCurImage Lib "devil" () As Long
Public Declare Function ilCompressFunc Lib "devil" (ByVal Mode As Long) As Byte
Public Declare Function ilConvertImage Lib "devil" (ByVal DestFormat As Long, ByVal DestType As Long) As Byte
Public Declare Function ilConvertPal Lib "devil" (ByVal DestFormat As Long) As Byte
Public Declare Function ilCopyImage Lib "devil" (ByVal Src As Long) As Byte
Public Declare Sub ilCopyPixels Lib "devil" (ByVal XOff As Long, ByVal YOff As Long, ByVal ZOff As Long, ByVal width As Long, ByVal height As Long, ByVal Depth As Long, ByVal OutFormat As Long, ByVal OutType As Long, ByRef OutData As Byte)
Public Declare Function ilCreateSubImage Lib "devil" (ByVal IType As Long, ByVal Num As Long) As Long
Public Declare Function ilDefaultImage Lib "devil" () As Boolean
Public Declare Sub ilDeleteImages Lib "devil" (ByVal Num As Long, ByRef Images As Long)
Public Declare Function ilDisable Lib "devil" (ByVal Mode As Long) As Byte
Public Declare Function ilEnable Lib "devil" (ByVal Mode As Long) As Byte
Public Declare Function ilFormatFunc Lib "devil" (ByVal Mode As Long) As Byte
Public Declare Sub ilGenImages Lib "devil" (ByVal Num As Long, ByRef Images As Long)
Public Declare Function ilGetBoolean Lib "devil" (ByVal Mode As Long) As Byte
Public Declare Sub ilGetBooleanv Lib "devil" (ByVal Mode As Long, ByRef Param As Byte)
Public Declare Function ilGetData Lib "devil" () As Long
Public Declare Function ilGetError Lib "devil" () As Long
Public Declare Function ilGetInteger Lib "devil" (ByVal Mode As Long) As Long
Public Declare Sub ilGetIntegerv Lib "devil" (ByVal Mode As Long, ByRef Param As Long)
Public Declare Function ilGetLumpPos Lib "devil" () As Long
Public Declare Function ilGetPalette Lib "devil" () As Long
Public Declare Function ilGetString Lib "devil" (StringName As Long) As Long
Public Declare Sub ilHint Lib "devil" (ByVal Target As Long, ByVal Mode As Long)
Public Declare Sub ilInit Lib "devil" ()
Public Declare Function ilIsDisabled Lib "devil" (ByVal Mode As Long) As Byte
Public Declare Function ilIsEnabled Lib "devil" (ByVal Mode As Long) As Byte
Public Declare Function ilIsImage Lib "devil" (ByVal Image As Long) As Byte
Public Declare Function ilIsValid Lib "devil" (ByVal IType As Long, ByVal FileName As String) As Byte
Public Declare Function ilIsValidF Lib "devil" (ByVal IType As Long, ByVal File As Long) As Byte
Public Declare Function ilIsValidL Lib "devil" (ByVal IType As Long, ByRef Lump As Byte, ByVal Size As Long) As Byte
Public Declare Sub ilKeyColour Lib "devil" (ByVal Red As Single, ByVal Green As Single, ByVal Blue As Single, ByVal Alpha As Single)
Public Declare Function ilLoad Lib "devil" (ByVal IType As Long, ByVal FileName As String) As Byte
Public Declare Function ilLoadF Lib "devil" (ByVal IType As Long, ByVal File As Long) As Byte
Public Declare Function ilLoadImage Lib "devil" (ByVal FileName As String) As Byte
Public Declare Function ilLoadL Lib "devil" (ByVal IType As Long, ByRef Lump As Byte, ByVal Size As Long)
Public Declare Function ilLoadPal Lib "devil" (ByVal FileName As String) As Byte
Public Declare Function ilOriginFunc Lib "devil" (ByVal Mode As Long) As Byte
Public Declare Function ilOverlayImage Lib "devil" (ByVal Src As Long, ByVal XCoord As Long, ByVal YCoord As Long, ByVal ZCoord As Long) As Byte
Public Declare Sub ilPopAttrib Lib "devil" ()
Public Declare Sub ilPushAttrib Lib "devil" (ByVal Bits As Long)
Public Declare Sub ilRegisterFormat Lib "devil" (ByVal Format As Long)
Public Declare Function ilRegisterLoad Lib "devil" (ByVal Ext As String, ByVal LoadProc As Long) As Byte
Public Declare Function ilRegisterMipNum Lib "devil" (ByVal Num As Long) As Byte
Public Declare Function ilRegisterNumImages Lib "devil" (ByVal Num As Long) As Byte
Public Declare Sub ilRegisterOrigin Lib "devil" (ByVal Origin As Long)
Public Declare Sub ilRegisterPal Lib "devil" (ByRef Pal As Byte, ByVal Size As Long, ByVal IType As Long)
Public Declare Function ilRegisterSave Lib "devil" (ByVal Ext As String, ByVal SaveProc As Long) As Byte
Public Declare Sub ilRegisterType Lib "devil" (ByVal IType As Long)
Public Declare Function ilRemoveLoad Lib "devil" (ByVal Ext As String) As Byte
Public Declare Function ilRemoveSave Lib "devil" (ByVal Ext As String) As Byte
Public Declare Sub ilResetRead Lib "devil" ()
Public Declare Sub ilResetWrite Lib "devil" ()
Public Declare Function ilSave Lib "devil" (ByVal IType As Long, ByVal FileName As String) As Byte
Public Declare Function ilSaveF Lib "devil" (ByVal IType As Long, ByVal File As Long) As Byte
Public Declare Function ilSaveImage Lib "devil" (ByVal FileName As String) As Byte
Public Declare Function ilSaveL Lib "devil" (ByVal IType As Long, ByRef Lump As Byte, ByVal Size As Long) As Byte
Public Declare Function ilSavePal Lib "devil" (ByVal FileName As String) As Byte
Public Declare Function ilSetData Lib "devil" (ByRef Data As Byte) As Byte
Public Declare Function ilSetDuration Lib "devil" (ByVal Duration As Long) As Byte
Public Declare Sub ilSetInteger Lib "devil" (ByVal Mode As Long, ByVal Param As Long)
Public Declare Sub ilSetPixels Lib "devil" (ByVal XOff As Long, ByVal YOff As Long, ByVal ZOff As Long, ByVal width As Long, ByVal height As Long, ByVal Depth As Long, ByVal Format As Long, ByVal IType As Long, ByRef Data As Byte)
Public Declare Sub ilSetRead Lib "devil" (ByVal fOpenRProc As Long, ByVal fCloseRProc As Long, ByVal fEofProc As Long, ByVal fGetcProc As Long, ByVal fReadProc As Long, ByVal fSeekRProc As Long, ByVal fTellRProc As Long)
Public Declare Sub ilSetString Lib "devil" (ByVal Mode As Long, ByVal FileName As String)
Public Declare Sub ilSetWrite Lib "devil" (ByVal fOpenWProc As Long, ByVal fCloseWProc As Long, ByVal fPutcProc As Long, ByVal fSeekWProc As Long, ByVal fTellWProc As Long, ByVal fWriteProc As Long)
Public Declare Function ilTexImage Lib "devil" (ByVal width As Long, ByVal height As Long, ByVal Depth As Long, ByVal Bpp As Byte, ByVal Format As Long, ByVal IType As Long, ByRef Data As Byte) As Byte
Public Declare Function ilTexImage0 Lib "devil" Alias "ilTexImage" (ByVal width As Long, ByVal height As Long, ByVal Depth As Long, ByVal Bpp As Byte, ByVal Format As Long, ByVal IType As Long, ByVal DataPointer As Long) As Byte
' used if you want to pass a NULL-pointer (zero).
Public Declare Function ilTypeFunc Lib "devil" (ByVal Mode As Long) As Byte

Public Declare Function ilLoadData Lib "devil" (ByVal FileName As String, ByVal width As Long, ByVal height As Long, ByVal Depth As Long, ByVal Bpp As Byte) As Byte
Public Declare Function ilLoadDataF Lib "devil" (ByVal File As Long, ByVal width As Long, ByVal height As Long, ByVal Depth As Long, ByVal Bpp As Byte) As Byte
Public Declare Function ilLoadDataL Lib "devil" (ByRef Lump As Long, ByVal Size As Long, ByVal width As Long, ByVal height As Long, ByVal Depth As Long, ByVal Bpp As Byte) As Byte
Public Declare Function ilSaveData Lib "devil" (ByVal FileName As String) As Byte

' For all those weirdos that spell "colour" without the 'u'.
Public Declare Sub ilClearColor Lib "devil" Alias "ilClearColour" (ByVal Red As Single, ByVal Green As Single, ByVal Blue As Single, ByVal Alpha As Single)
Public Declare Sub ilKeyColor Lib "devil" Alias "ilKeyColour" (ByVal Red As Single, ByVal Green As Single, ByVal Blue As Single, ByVal Alpha As Single)
